--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -206,6 +206,10 @@ body {
             color: #5180a2;
             padding: 10px 10px;
             margin: 10px 0;
+            img{
+              width: 24px;
+              height: 24px;
+            }
           }
         }
       }
@@ -390,6 +394,147 @@ body {
               }
             }
           }
+
+          
+        }
+      }
+    }
+  }
+
+  #content-creation-wrap{
+    .slider-content-1 {
+      .swiper {
+        border-radius: 8px;
+        height: 602px;
+
+        .swiper-wrapper {
+          height: 361px;
+
+          .swiper-slide {
+            img {
+              width: 100%;
+              object-fit: cover;
+              height: auto;
+            }
+
+            .instagram-media{
+              background: white;
+              max-width: 100% !important;
+              width: calc(100% - 2px);
+              border-radius: 3px;
+              border: 1px solid rgb(219, 219, 219);
+              box-shadow: none;
+              display: block;
+              margin: 0px 0px 12px;
+              min-width: 326px;
+              padding: 0px;
+              height: 600px;
+            }
+          }
+        }
+      }
+
+      .swiper-pagination {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
+        }
+      }
+
+      .swiper-pagination-2 {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
+        }
+      }
+
+      .swiper-pagination-3 {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
+        }
+      }
+
+      .swiper-pagination-4 {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
+        }
+      }
+
+      .swiper-pagination-5 {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
+        }
+      }
+
+      .swiper-pagination-6 {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
+        }
+      }
+
+      .swiper-pagination-7 {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
+        }
+      }
+
+      .swiper-pagination-8 {
+        position: relative;
+        margin: 25px 0 20px 0;
+        height: 20px;
+        text-align: center;
+        .swiper-pagination-bullet {
+          background: #9a0808;
+        }
+        .swiper-pagination-bullet-active {
+          background: #9a0808;
         }
       }
     }
@@ -1470,6 +1615,20 @@ body {
                       object-fit: cover;
                       height: auto;
                     }
+
+                    .instagram-media{
+                      background: white;
+                      max-width: 100% !important;
+                      width: calc(100% - 2px);
+                      border-radius: 3px;
+                      border: 1px solid rgb(219, 219, 219);
+                      box-shadow: none;
+                      display: block;
+                      margin: 0px 0px 12px;
+                      min-width: 326px;
+                      padding: 0px;
+                      height: 592px;
+                    }
                   }
                 }
               }
@@ -1579,6 +1738,9 @@ body {
               }
             }
           }
+
+          
+
         }
       }
     }
