--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -206,9 +206,20 @@ body {
             color: #5180a2;
             padding: 10px 10px;
             margin: 10px 0;
-            img{
-              width: 24px;
-              height: 24px;
+            .box{
+              display: flex;
+              .box-icon{
+                display: inline-block;
+                margin-right: 8px;
+                img{
+                  width: 24px;
+                  height: 24px;
+                  object-fit: cover;
+                }
+              }
+              span{
+                align-self: center;
+              }
             }
           }
         }
