--- a/yamaha-youth/assets/css/miss-classy.css
+++ b/yamaha-youth/assets/css/miss-classy.css
@@ -117,10 +117,12 @@
 }
 
 #miss-classy .miss-classy-img-container {
+  background-color: gray;
+  position: relative;
   width: 100%;
+  padding-top: 100%; /* 1:1 Aspect Ratio */
   overflow: hidden;
   border-radius: 20px;
-  position: relative;
 }
 
 #miss-classy .miss-classy-img-container img {
@@ -128,11 +130,12 @@
   height: 100%;
   object-fit: cover;
   object-position: center center;
+  margin: auto;
+  position:  absolute;
   top: 0;
   left: 0;
-  right: 0;
   bottom: 0;
-  margin: auto;
+  right: 0;
 }
 
 #miss-classy .finalist-identity {
