--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -263,9 +263,24 @@ body {
                 border-radius: 8px;
                 text-transform: uppercase;
                 color: #5180a2;
-                padding: 10px 10px;
+                padding: 5px 10px;
                 margin: 10px 0;
                 margin-right: 6px;
+                .box{
+                  display: flex;
+                  .box-icon{
+                    display: inline-block;
+                    margin-right: 8px;
+                    img{
+                      width: 24px;
+                      height: 24px;
+                      object-fit: cover;
+                    }
+                  }
+                  span{
+                    align-self: center;
+                  }
+                }
               }
             }
           }
@@ -281,6 +296,21 @@ body {
             margin: 10px 0;
             border-radius: 8px;
             text-transform: uppercase;
+            .box{
+              display: flex;
+              .box-icon{
+                display: inline-block;
+                margin-right: 8px;
+                img{
+                  width: 24px;
+                  height: 24px;
+                  object-fit: cover;
+                }
+              }
+              span{
+                align-self: center;
+              }
+            }
           }
 
           .slider-content-1 {
@@ -724,9 +754,24 @@ body {
                   border-radius: 8px;
                   text-transform: uppercase;
                   color: #5180a2;
-                  padding: 10px 10px;
+                  padding: 5px 10px;
                   margin: 10px 0;
                   margin-right: 6px;
+                  .box{
+                    display: flex;
+                    .box-icon{
+                      display: inline-block;
+                      margin-right: 8px;
+                      img{
+                        width: 24px;
+                        height: 24px;
+                        object-fit: cover;
+                      }
+                    }
+                    span{
+                      align-self: center;
+                    }
+                  }
                 }
               }
             }
