Update LPS Roadshow

--- a/festivalcreative-lps/src/css/finalist.css
+++ b/festivalcreative-lps/src/css/finalist.css
@@ -42,6 +42,8 @@
 }
 #finalist .mycontainer .finalist-data .finalist-thumbnail img {
   position: absolute;
+  object-fit: cover;
+  object-position: center;
   top: 0;
   left: 0;
   bottom: 0;
