--- a/festivalcreative-lps/src/scss/finalist.scss
+++ b/festivalcreative-lps/src/scss/finalist.scss
@@ -42,6 +42,8 @@
                 margin-bottom: 16px;
                 img{
                     position:  absolute;
+                    object-fit: cover;
+                    object-position: center;
                     top: 0;
                     left: 0;
                     bottom: 0;
