--- a/pilihanbunda-awards/src/css/voting.css
+++ b/pilihanbunda-awards/src/css/voting.css
@@ -24,6 +24,9 @@
   margin: 0 200px;
   font-weight: 400;
 }
+#votingform .container .header-voting .sosmed {
+  margin-top: 1rem;
+}
 #votingform .container .header-voting #social-media-share {
   width: fit-content;
   display: flex;
@@ -53,6 +56,10 @@
   color: #b0367c;
   font-family: "DMSans-Bold", sans-serif;
 }
+#votingform .container .voting-instruction .accordion .accordion-item .accordion-button:focus {
+  border: none;
+  box-shadow: none;
+}
 #votingform .container .voting-instruction .accordion .accordion-item .accordion-body {
   color: #89727c;
   font-family: "DMSans-Regular", sans-serif;
@@ -62,7 +69,12 @@
   background-color: #ffffff;
   box-shadow: none;
 }
+#votingform .container .embed-voting {
+  max-width: 640px;
+  width: 100%;
+}
 #votingform .container .embed-voting iframe {
+  width: 100%;
   position: relative;
   left: 50%;
   transform: translate(-50%);
