--- a/pilihanbunda-awards/src/scss/voting.scss
+++ b/pilihanbunda-awards/src/scss/voting.scss
@@ -73,6 +73,9 @@
             background-color: #ffffff;
             box-shadow: none;
           }
+          b{
+            font-family: "goldplay-bold";
+          }
         }
         // .accordion-item:nth-of-type(1) {
         //   border-bottom: none;
