--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -454,6 +454,9 @@ body {
 
 /* Responsive Breakpoint */
 @media (min-width: 0px) and (max-width: 575px) {
+  #wrap-left {
+    height: auto;
+  }
   body {
     height: 100vh;
     background-image: url("../../assets/images/school-competition/bg-school-mobile.jpg");
@@ -682,6 +685,9 @@ body {
   }
 }
 @media (min-width: 576px) and (max-width: 767px) {
+  #wrap-left {
+    height: auto;
+  }
   body {
     height: 100vh;
     background-image: url("../../assets/images/school-competition/bg-school.jpg");
@@ -865,6 +871,9 @@ body {
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
+  #wrap-left {
+    height: auto;
+  }
   #school-content {
     margin-top: 120px;
     margin-bottom: 120px;
@@ -1078,7 +1087,15 @@ body {
     text-align: center;
   }
 }
+@media (min-width: 992px) and (max-width: 1199px) {
+  #wrap-left {
+    height: auto;
+  }
+}
 @media (min-width: 1200px) and (max-width: 2000px) {
+  #wrap-left {
+    height: auto;
+  }
   #school-content {
     margin-top: 120px;
     margin-bottom: 120px;
