--- a/yamaha-youth/assets/scss/school.scss
+++ b/yamaha-youth/assets/scss/school.scss
@@ -885,8 +885,8 @@ body {
 //small
 
 @media (min-width: 576px) and (max-width: 767px) {
-  #wrap-left{
-    height: auto;
+  #wrap-left {
+    height: 550px;
   }
 
   body {
@@ -951,6 +951,7 @@ body {
                     margin-right: 10px;
                     border-radius: 8px;
                     padding: 12px;
+                    height: 170px;
 
                     .title {
                       color: #5180a2;
@@ -1128,6 +1129,10 @@ body {
 
 @media (min-width: 768px) and (max-width: 991px) {
 
+  #wrap-left {
+    height: 550px;
+  }
+
   #school-content {
     margin-top: 120px;
     margin-bottom: 120px;
@@ -1179,6 +1184,7 @@ body {
                     margin-right: 10px;
                     border-radius: 8px;
                     padding: 12px;
+                    height: 257px;
 
                     .title {
                       color: #5180a2;
@@ -1245,7 +1251,7 @@ body {
 
           #sosmed{
             position: absolute;
-            top: 487px;
+            top: 467px;
             width: 100%;
             #social-media-share{
               margin-left: auto;
