--- a/yamaha-youth/src/css/school.css
+++ b/yamaha-youth/src/css/school.css
@@ -686,7 +686,7 @@ body {
 }
 @media (min-width: 576px) and (max-width: 767px) {
   #wrap-left {
-    height: auto;
+    height: 550px;
   }
   body {
     height: 100vh;
@@ -746,6 +746,7 @@ body {
     margin-right: 10px;
     border-radius: 8px;
     padding: 12px;
+    height: 170px;
   }
   #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title {
     color: #5180a2;
@@ -871,6 +872,9 @@ body {
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
+  #wrap-left {
+    height: 550px;
+  }
   #school-content {
     margin-top: 120px;
     margin-bottom: 120px;
@@ -917,6 +921,7 @@ body {
     margin-right: 10px;
     border-radius: 8px;
     padding: 12px;
+    height: 257px;
   }
   #school-content .section-container .wrap-content .left-side .destination .wrap-destination .latarkota .wrap-desc .about-destination .title {
     color: #5180a2;
@@ -955,7 +960,7 @@ body {
   }
   #school-content .section-container .wrap-content .left-side #sosmed {
     position: absolute;
-    top: 487px;
+    top: 467px;
     width: 100%;
   }
   #school-content .section-container .wrap-content .left-side #sosmed #social-media-share {
