--- a/yamaha-youth/assets/css/miss-classy.css
+++ b/yamaha-youth/assets/css/miss-classy.css
@@ -10,6 +10,9 @@
 
 /* Sidebar */
 
+#miss-classy .section-container aside {
+  padding-bottom: 50px;
+}
 #miss-classy .sidebar-city-image-canvas {
   max-width: 360px;
   max-height: 360px;
@@ -131,7 +134,7 @@
   object-fit: cover;
   object-position: center center;
   margin: auto;
-  position:  absolute;
+  position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
@@ -362,15 +365,15 @@
   border: none;
 }
 
-.not-avail img{
+.not-avail img {
   width: 100%;
   max-width: 150px;
   margin-top: 24px;
   margin-bottom: 12px;
 }
 
-.not-avail h1{
-  color: #F0952B;
+.not-avail h1 {
+  color: #f0952b;
   text-align: center;
   font-size: 20px;
   font-style: normal;
@@ -378,8 +381,8 @@
   margin-bottom: 12px;
 }
 
-.not-avail p{
-  color: #F0952B;
+.not-avail p {
+  color: #f0952b;
   text-align: center;
   font-size: 14px;
   font-style: normal;
