--- a/yamaha-youth/assets/css/wp-aggregator.css
+++ b/yamaha-youth/assets/css/wp-aggregator.css
@@ -1,4 +1,4 @@
-a{
+a {
   text-decoration: none;
 }
 #aggregator {
@@ -92,6 +92,10 @@ a{
   width: 100%;
 }
 
+#aggregator .nav {
+  flex-wrap: nowrap;
+}
+
 .nav-link {
   color: #f0952b;
 }
@@ -108,6 +112,18 @@ a{
 
 .video-tab {
   border-radius: 0 8px 8px 0;
+}
+
+#aggregator .cta-button {
+  font-weight: 500;
+  font-size: 14px;
+
+  gap: 10px;
+  padding: 8px 16px;
+
+  background-color: #c72026;
+  color: white;
+  margin-top: 20px;
 }
 
 @media (max-width: 576px) {
