--- a/yamaha-youth/assets/css/navbar.css
+++ b/yamaha-youth/assets/css/navbar.css
@@ -103,6 +103,9 @@
   color: #274d6e;
   padding: 0.75rem 1rem;
 }
+.dropdown-item:active{
+  background-color: #e9ecef !important;
+}
 .auth-button {
   color: white;
   padding: 8px 20px;
