--- a/yamaha-youth/assets/css/navbar.css
+++ b/yamaha-youth/assets/css/navbar.css
@@ -29,7 +29,15 @@
   border-radius: 50rem;
 }
 .nav-link.active,
-.nav-link:hover {
+.nav-link:hover,
+.nav-link:active {
+  background-color: rgb(255, 255, 255, 0.3);
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+  color: #274d6e;
+  text-decoration: none;
   background-color: rgb(255, 255, 255, 0.3);
 }
 
