--- a/yamaha-youth/assets/css/navbar.css
+++ b/yamaha-youth/assets/css/navbar.css
@@ -22,14 +22,6 @@
   transition: all 0.2s ease;
 }
 
-#nav-bar .nav-avatar {
-  width: 44px;
-  height: 44px;
-  object-fit: cover;
-  border-radius: 100px;
-  /* border: 2px solid #D865A3; */
-}
-
 #nav-bar .nav-item a {
   color: #274d6e;
 }
@@ -37,15 +29,7 @@
   border-radius: 50rem;
 }
 .nav-link.active,
-.nav-link:hover,
-.nav-link:active {
-  background-color: rgb(255, 255, 255, 0.3);
-}
-
-.dropdown-item.active,
-.dropdown-item:active {
-  color: #274d6e;
-  text-decoration: none;
+.nav-link:hover {
   background-color: rgb(255, 255, 255, 0.3);
 }
 
@@ -75,6 +59,19 @@
 .dropdown-menu {
   width: 250px;
 }
+
+#navbarDropdown.mpc-account {
+  padding: 0;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+}
+#navbarDropdown img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 .auth-nav .dropdown-menu .account-name {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -85,6 +82,13 @@
 .auth-nav .dropdown-menu .account-name:active,
 .auth-nav .dropdown-menu .account-name:hover {
   background-color: rgb(255, 255, 255, 0.3);
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+  color: #274d6e;
+  text-decoration: none;
+  background-color: #e9ecef;
 }
 
 .auth-nav .dropdown-menu .account-name p {
@@ -107,20 +111,17 @@
 }
 .auth-nav .dropdown-menu[data-bs-popper] {
   max-width: 250px;
-  left: -155px;
-  background-color: rgb(255, 255, 255, 0.7);
+  left: -185px;
+  background-color: rgb(255, 255, 255, 0.8);
   backdrop-filter: blur(24px);
   border-radius: 20px;
   border: solid 1px #d1d5db;
-  top: 125%;
+  top: 140%;
 }
 
 .dropdown-item {
   color: #274d6e;
   padding: 0.75rem 1rem;
-}
-.dropdown-item:active{
-  background-color: #e9ecef !important;
 }
 .auth-button {
   color: white;
