Update Form Section

--- a/festivalcreative-lps/src/css/main.css
+++ b/festivalcreative-lps/src/css/main.css
@@ -106,6 +106,37 @@ body #form .container .fill-wrap .fill {
   border-radius: 0 12px 12px 0;
   height: 100%;
 }
+body #form .container .fill-wrap .fill #closed-submission .form-close-illustration {
+  width: 100%;
+  max-width: 254px;
+  margin-bottom: 20px;
+}
+body #form .container .fill-wrap .fill #closed-submission .title {
+  font-size: 23px;
+  color: #EE420C;
+  font-family: "montserat-bold";
+  margin-bottom: 20px;
+}
+body #form .container .fill-wrap .fill #closed-submission p {
+  font-size: 14px;
+  color: #292929;
+  font-family: montserat-regular;
+  line-height: 20px;
+  margin-bottom: 20px;
+}
+body #form .container .fill-wrap .fill #closed-submission .btn-default {
+  background: #257AE4;
+  color: #ffffff;
+  font-size: 14px;
+  font-family: montserat-medium;
+  width: 100%;
+}
+body #form .container .fill-wrap .fill #closed-submission .btn-default .arrow-right {
+  width: 100%;
+  max-width: 18px;
+  margin-top: -1px;
+  margin-left: 8px;
+}
 body #form .container .fill-wrap .fill .title-wrap {
   text-align: center;
 }
