--- a/festivalcreative-lps/src/css/finalist.css
+++ b/festivalcreative-lps/src/css/finalist.css
@@ -23,7 +23,8 @@
 }
 #finalist .mycontainer .finalist-data .box-instagram {
   height: 500px;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: scroll;
   margin-bottom: 15px;
   border-radius: 16px;
   border: 1px solid #CECECE;
